[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbay-lite"
version = "1.0.0"
description = "Minimal cloud browser SDK for AgentBay (Alibaba Cloud Wuying) — session lifecycle management via CDP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agentbay", "cloud-browser", "cdp", "browser-automation", "wuying"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/ayanami-browser-pilot/agentbay-lite"
Repository = "https://github.com/ayanami-browser-pilot/agentbay-lite"
Issues = "https://github.com/ayanami-browser-pilot/agentbay-lite/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbay_lite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
